code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Mar-2011 Mark Dexter
 # [#25006] Alternative Layout Not Implemented in com_search, com_users
 # [#24821] Add support for defer/async to JDocument
 # [#25035] extra closing div in \components\com_weblinks\views\form\tmpl\edit.php

01-Mar-2011 Ian MacLennan
 # [#25038] Codemirror update causes improper characters in template html/css editing

24-Feb-2011 Mark Dexter
 # Revert 24710 Contact language is ignored in frontend

21-Feb-2011 Mark Dexter
 # [#24886] No save icon in article editor for new article with category level permission
 # [#24909] *Category Save as Copy does not save with different title/alias
 # [#22624] bug: old extension version reported from cache after automatic extension update**
 # [#24433] *modal_contacts field type problems
 # [#24963] Missing "parent" css class if menu is collapsed
 # [#24589] Systematic elimination of DS as directory separator - Round 2
 # [#24838] mod_articles_category generates a PHP warning when using language filter
 # [#24489] Joomla displaying error after uploading an image using Media Manager and the path does not stay where it is after the upload
 # [#24799] Double category strings in URLs
 # [#24524] Redirect is Not Working with SEF
 # [#24908] A banner with limited impressions will never show
 # [#24903] Cannot Translate Option Values using JForm SQL Field Type**
 # [#24857] Users with create permission in a category cannot see the image button below the editor
 # [#24993] Cannot allow a group to create in a single sub category
 # [#24307] Login form does not use https
 # [#24528] Fatal error in mod_articles_category when showing readmore
 # [#24880] Can't display teaser text in full article view.
 # [#24914] Wrong class in kategory list mode
 # [#24548] Abort during install of component and module fail due to rollback methods being protected instead of public.